# json-rpc-api-proxy

./: README.md  package-lock.json  package.json
clients/python/: README.md  jrpc_client.py  pyproject.toml
int/: docker-compose.yml
int/client/: Dockerfile  client.py
int/server/: Dockerfile  index.js  package-lock.json  package.json
src/: server.ts
