[project]
name = "jsonrpc-api-proxy-client"
version = "0.1.0"
description = "JSON RPC API Proxy Client"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "async-selective-queue>=0.1.1.post0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[dependency-group]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
select = ["E", "F", "C", "D", "TID"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
]

line-length = 90

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
